tests/error/modInteger-pair-integer--integer--wrong-1st-argument.uplc
(program 1.0.0[[(builtin modInteger)(con pair(integer)(integer) (90, 93))](con integer 10)])